Fix IE11 alignment

--- a/src/components/CloseButton/CloseButton.module.scss
+++ b/src/components/CloseButton/CloseButton.module.scss
@@ -4,4 +4,5 @@
 
 .closeButton {
   border: 0;
+  background-color: transparent;
 }
