--- a/src/components/JobForm/JobForm.module.scss
+++ b/src/components/JobForm/JobForm.module.scss
@@ -4,7 +4,7 @@
 }
 
 .container {
-  max-width: 600px;
+  width: 600px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -23,6 +23,7 @@
   margin-left: auto;
   margin-right: 20px;
   margin-top: 20px;
+  width: 50px;
 }
 
 .formSection {
