--- a/src/components/Landing/Landing.module.scss
+++ b/src/components/Landing/Landing.module.scss
@@ -29,13 +29,8 @@
 }
 
 .h2 {
-  color: #9b9b9b;
   text-transform: uppercase;
   font-weight: 200;
   letter-spacing: 4px;
   font-size: 0.875rem;
-}
-
-.white {
-  color: #fff;
 }
